Changes to icons and images

--- a/style.css
+++ b/style.css
@@ -1,97 +1,111 @@
 body {
-    font-family: arial, helvetica, sans-serif;
-    margin: 0px;
-    background: lightgrey;
-    display: grid;
-    gap: 60px;
-    justify-items: center;
-    margin-top: 20px;
-  }
-  
-  img {
-    max-width: 100%;
-    display: block;
-  }
-   
-  a {
-    text-decoration: none;
-  }
-  
-  p, h2, h3, h4 {
-    margin: 0px;
-  }
-  
-  p{
-    font-size: 20px;
-      line-height: 1.3;
-  }
-  .menu {
-     display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .menu a{
-    background: white;
-    padding: 15px 30px;
-      border-radius: 4px;
-    color: black;
-    text-transform: uppercase;
-  }
-  .conteudo{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-     max-width: 1000px;
-  }
-  .introducao{
-    background: white;
-    padding: 40px;
-    text-align: right;
-    position: relative;
-    display: grid;
-    align-content: center;
-    gap: 20px;
-    justify-items: end;
-  }
-  .detalhe {
-    width: 60px;
-    height: 4px;
-    background: red;
-    top: 30px;
-    right: -30px;
-    position: absolute;
-  }
-  button {
-    background: red;
-    color: white;
-    padding: 15px 30px;
-    border-radius:4px;
-    border: 0px;
-  }
-  .subtitulo {
-    font-size: 64px;
-    color: grey;
-    text-align: right;
-    padding: 40px;
-    align-self: center;
-  }
-  .vantagens {
-    background: white;
-    padding: 40px;
-  }
-  .vantagens-item {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    gap: 10px 20px;
-    padding: 20px;
-  }
-  .vantagens-item p {
-    grid-column: 2;
-  }
-  .rodape {
-    background: white;
-    width: 100%;
-      text-align: center;
-    padding: 40px;
-    box-sizing: border-box;
-  }
+  font-family: arial, helvetica, sans-serif;
+  margin: 0px;
+  background: #f7f7f7;
+  display: grid;
+  gap: 60px;
+  justify-items: center;
+  margin-top: 20px;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+a {
+  text-decoration: none;
+}
+
+p,
+h2,
+h3,
+h4 {
+  margin: 0px;
+}
+
+p {
+  font-size: 20px;
+  line-height: 1.3;
+}
+
+.menu {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.menu a {
+  background: #fff;
+  padding: 15px 30px;
+  border-radius: 4px;
+  color: black;
+  text-transform: uppercase;
+}
+
+.conteudo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 1000px;
+}
+
+.introducao {
+  background: w#fff;
+  padding: 40px;
+  text-align: right;
+  position: relative;
+  display: grid;
+  align-content: center;
+  gap: 20px;
+  justify-items: end;
+}
+
+.detalhe {
+  width: 60px;
+  height: 4px;
+  background: #f00;
+  top: 30px;
+  right: -30px;
+  position: absolute;
+}
+
+button {
+  background: #f00;
+  color: white;
+  padding: 15px 30px;
+  border-radius: 4px;
+  border: 0px;
+}
+
+.subtitulo {
+  font-size: 64px;
+  color: grey;
+  text-align: right;
+  padding: 40px;
+  align-self: center;
+}
+
+.vantagens {
+  background: white;
+  padding: 40px;
+}
+
+.vantagens-item {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 10px 20px;
+  padding: 20px;
+}
+
+.vantagens-item p {
+  grid-column: 2;
+}
+
+.rodape {
+  background: white;
+  width: 100%;
+  text-align: center;
+  padding: 40px;
+  box-sizing: border-box;
+}
