--- a/style.css
+++ b/style.css
@@ -17,16 +17,28 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
 p,
+h1,
 h2,
-h3,
-h4 {
+h3 {
   margin: 0px;
 }
 
 p {
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 1.3;
+}
+
+.header {
+  display: grid;
+  justify-items: center;
+  gap: 60px;
 }
 
 .menu {
@@ -37,11 +49,17 @@ p {
 }
 
 .menu a {
+  display: block;
   background: #fff;
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   border-radius: 4px;
   color: black;
   text-transform: uppercase;
+  border: 2px solid transparent;
+}
+
+.menu a:hover {
+  border-color: #e21;
 }
 
 .conteudo {
@@ -61,7 +79,12 @@ p {
   justify-items: end;
 }
 
-.detalhe {
+.introducao h1 {
+  font-size: 2rem;
+}
+
+.introducao::before {
+  content: "";
   width: 60px;
   height: 4px;
   background: #f00;
@@ -73,17 +96,22 @@ p {
 button {
   background: #f00;
   color: white;
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   border-radius: 4px;
   border: 0px;
 }
 
+button:hover {
+  background: #900;
+}
+
 .subtitulo {
-  font-size: 64px;
+  font-size: 4rem;
   color: grey;
   text-align: right;
   padding: 40px;
   align-self: center;
+  background-image: url("./img/onda.svg");
 }
 
 .vantagens {
@@ -96,6 +124,14 @@ button {
   grid-template-columns: auto 1fr;
   gap: 10px 20px;
   padding: 20px;
+}
+
+.vantagens-item:nth-child(odd) {
+  background: #f7f7f7;
+}
+
+.vantagens-item:hover {
+  border-left: 4px solid #e21;
 }
 
 .vantagens-item p {
