added prefer-color-scheme dark mode

--- a/style.css
+++ b/style.css
@@ -1,11 +1,33 @@
+:root {
+  --cor-primaria:#e21;
+  --cor-primaria-escura:#900;
+  --fundo-1: #f7f7f7;
+  --fundo-2: #ffffff;
+  --texto: #000000;
+  --subtitulo: rgba(0,0,0,0.2);
+  --onda: url("./img/onda-clara.svg");
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --fundo-1: #111111;
+    --fundo-2: #000000;
+    --texto: #ffffff;
+    --subtitulo: rgba(255,255,255,0.2);
+    --onda: url("./img/onda-escura.svg");
+  }
+}
+
+
 body {
   font-family: arial, helvetica, sans-serif;
   margin: 0px;
-  background: #f7f7f7;
+  background: var(--fundo-1);
   display: grid;
   gap: 60px;
   justify-items: center;
   margin-top: 20px;
+  color: var(--texto);
 }
 
 img {
@@ -50,16 +72,16 @@ p {
 
 .menu a {
   display: block;
-  background: #fff;
+  background: var(--fundo-2);
   padding: 1rem 2rem;
   border-radius: 4px;
-  color: black;
+  color: var(--texto);
   text-transform: uppercase;
   border: 2px solid transparent;
 }
 
 .menu a:hover {
-  border-color: #e21;
+  border-color: var(--cor-primaria);
 }
 
 .conteudo {
@@ -69,7 +91,7 @@ p {
 }
 
 .introducao {
-  background: w#fff;
+  background: wvar(--fundo-2);
   padding: 40px;
   text-align: right;
   position: relative;
@@ -87,7 +109,7 @@ p {
   content: "";
   width: 60px;
   height: 4px;
-  background: #f00;
+  background: var(--cor-primaria);
   top: 30px;
   right: -30px;
   position: absolute;
@@ -100,28 +122,28 @@ p {
 }
 
 button {
-  background: #f00;
-  color: white;
+  background: var(--cor-primaria);
+  color: #ffffff;
   padding: 1rem 2rem;
   border-radius: 4px;
   border: 0px;
 }
 
 button:hover {
-  background: #900;
+  background: var(--cor-primaria-escura);
 }
 
 .subtitulo {
   font-size: 4rem;
-  color: grey;
+  color: var(--subtitulo);
   text-align: right;
   padding: 40px;
   align-self: center;
-  background-image: url("./img/onda.svg");
+  background-image: var(--onda);
 }
 
 .vantagens {
-  background: white;
+  background: var(--fundo-2);
   padding: 40px;
 }
 
@@ -133,11 +155,11 @@ button:hover {
 }
 
 .vantagens-item:nth-child(odd) {
-  background: #f7f7f7;
+  background: var(--fundo-1);
 }
 
 .vantagens-item:hover {
-  border-left: 4px solid #e21;
+  border-left: 4px solid var(--cor-primaria);
 }
 
 .vantagens-item p {
@@ -145,7 +167,7 @@ button:hover {
 }
 
 .rodape {
-  background: white;
+  background: var(--fundo-2);
   width: 100%;
   text-align: center;
   padding: 40px;
